projects/batfish/src/test/resources/org/batfish/representation/aws/test-transit-gateway/aws_configs/Reservations.json
{
 "Reservations": [
  {
   "Groups": [],
   "Instances": [
    {
     "AmiLaunchIndex": 0,
     "Architecture": "x86_64",
     "BlockDeviceMappings": [
      {
       "DeviceName": "/dev/sda1",
       "Ebs": {
        "AttachTime": "2019-12-01 08:05:55+00:00",
        "DeleteOnTermination": true,
        "Status": "attached",
        "VolumeId": "vol-044a3e24cea101d69"
       }
      }
     ],
     "CapacityReservationSpecification": {
      "CapacityReservationPreference": "open"
     },
     "ClientToken": "",
     "CpuOptions": {
      "CoreCount": 1,
      "ThreadsPerCore": 1
     },
     "EbsOptimized": false,
     "EnaSupport": true,
     "HibernationOptions": {
      "Configured": false
     },
     "Hypervisor": "xen",
     "ImageId": "ami-0d5d9d301c853a04a",
     "InstanceId": "i-075e846ed41670385",
     "InstanceType": "t2.micro",
     "KeyName": "vpc-peering-experiments",
     "LaunchTime": "2019-12-01 08:05:54+00:00",
     "Monitoring": {
      "State": "disabled"
     },
     "NetworkInterfaces": [
      {
       "Attachment": {
        "AttachTime": "2019-12-01 08:05:54+00:00",
        "AttachmentId": "eni-attach-0c8bcf752353acd43",
        "DeleteOnTermination": true,
        "DeviceIndex": 0,
        "Status": "attached"
       },
       "Description": "Primary network interface",
       "Groups": [
        {
         "GroupId": "sg-051f619de836dbaf3",
         "GroupName": "launch-wizard-3"
        }
       ],
       "InterfaceType": "interface",
       "Ipv6Addresses": [],
       "MacAddress": "02:e7:79:21:a0:90",
       "NetworkInterfaceId": "eni-030eeb1fb8c2d6654",
       "OwnerId": "554773406868",
       "PrivateIpAddress": "10.10.20.154",
       "PrivateIpAddresses": [
        {
         "Primary": true,
         "PrivateIpAddress": "10.10.20.154"
        }
       ],
       "SourceDestCheck": true,
       "Status": "in-use",
       "SubnetId": "subnet-0b5b8ddd5a69fcfcd",
       "VpcId": "vpc-0404e08ceddf7f650"
      }
     ],
     "Placement": {
      "AvailabilityZone": "us-east-2a",
      "GroupName": "",
      "Tenancy": "default"
     },
     "PrivateDnsName": "ip-10-10-20-154.us-east-2.compute.internal",
     "PrivateIpAddress": "10.10.20.154",
     "ProductCodes": [],
     "PublicDnsName": "",
     "RootDeviceName": "/dev/sda1",
     "RootDeviceType": "ebs",
     "SecurityGroups": [
      {
       "GroupId": "sg-051f619de836dbaf3",
       "GroupName": "launch-wizard-3"
      }
     ],
     "SourceDestCheck": true,
     "State": {
      "Code": 16,
      "Name": "running"
     },
     "StateTransitionReason": "",
     "SubnetId": "subnet-0b5b8ddd5a69fcfcd",
     "VirtualizationType": "hvm",
     "VpcId": "vpc-0404e08ceddf7f650"
    }
   ],
   "OwnerId": "554773406868",
   "ReservationId": "r-0102cd039532a0e5d"
  },
  {
   "Groups": [],
   "Instances": [
    {
     "AmiLaunchIndex": 0,
     "Architecture": "x86_64",
     "BlockDeviceMappings": [
      {
       "DeviceName": "/dev/sda1",
       "Ebs": {
        "AttachTime": "2019-11-28 18:50:44+00:00",
        "DeleteOnTermination": true,
        "Status": "attached",
        "VolumeId": "vol-0bf6b6699d072c88e"
       }
      }
     ],
     "CapacityReservationSpecification": {
      "CapacityReservationPreference": "open"
     },
     "ClientToken": "",
     "CpuOptions": {
      "CoreCount": 1,
      "ThreadsPerCore": 1
     },
     "EbsOptimized": false,
     "EnaSupport": true,
     "HibernationOptions": {
      "Configured": false
     },
     "Hypervisor": "xen",
     "ImageId": "ami-0d5d9d301c853a04a",
     "InstanceId": "i-06ba034d88c84ef07",
     "InstanceType": "t2.micro",
     "KeyName": "vpc-peering-experiments",
     "LaunchTime": "2019-11-28 18:50:43+00:00",
     "Monitoring": {
      "State": "disabled"
     },
     "NetworkInterfaces": [
      {
       "Attachment": {
        "AttachTime": "2019-11-28 18:50:43+00:00",
        "AttachmentId": "eni-attach-0954405c33a3cce89",
        "DeleteOnTermination": true,
        "DeviceIndex": 0,
        "Status": "attached"
       },
       "Description": "Primary network interface",
       "Groups": [
        {
         "GroupId": "sg-09606ce9642cac154",
         "GroupName": "launch-wizard-2"
        }
       ],
       "InterfaceType": "interface",
       "Ipv6Addresses": [],
       "MacAddress": "0a:63:9f:a8:c0:9a",
       "NetworkInterfaceId": "eni-0f0708220e812876c",
       "OwnerId": "554773406868",
       "PrivateIpAddress": "10.10.10.157",
       "PrivateIpAddresses": [
        {
         "Primary": true,
         "PrivateIpAddress": "10.10.10.157"
        }
       ],
       "SourceDestCheck": true,
       "Status": "in-use",
       "SubnetId": "subnet-006a19c846f047bd7",
       "VpcId": "vpc-0404e08ceddf7f650"
      }
     ],
     "Placement": {
      "AvailabilityZone": "us-east-2c",
      "GroupName": "",
      "Tenancy": "default"
     },
     "PrivateDnsName": "ip-10-10-10-157.us-east-2.compute.internal",
     "PrivateIpAddress": "10.10.10.157",
     "ProductCodes": [],
     "PublicDnsName": "",
     "RootDeviceName": "/dev/sda1",
     "RootDeviceType": "ebs",
     "SecurityGroups": [
      {
       "GroupId": "sg-09606ce9642cac154",
       "GroupName": "launch-wizard-2"
      }
     ],
     "SourceDestCheck": true,
     "State": {
      "Code": 16,
      "Name": "running"
     },
     "StateTransitionReason": "",
     "SubnetId": "subnet-006a19c846f047bd7",
     "VirtualizationType": "hvm",
     "VpcId": "vpc-0404e08ceddf7f650"
    }
   ],
   "OwnerId": "554773406868",
   "ReservationId": "r-03a6a522fd883aadc"
  },
  {
   "Groups": [],
   "Instances": [
    {
     "AmiLaunchIndex": 0,
     "Architecture": "x86_64",
     "BlockDeviceMappings": [],
     "CapacityReservationSpecification": {
      "CapacityReservationPreference": "open"
     },
     "ClientToken": "",
     "CpuOptions": {
      "CoreCount": 1,
      "ThreadsPerCore": 1
     },
     "EbsOptimized": false,
     "EnaSupport": true,
     "HibernationOptions": {
      "Configured": false
     },
     "Hypervisor": "xen",
     "ImageId": "ami-0d5d9d301c853a04a",
     "InstanceId": "i-04a292ff83b3aa833",
     "InstanceType": "t2.micro",
     "KeyName": "vpc-peering-experiments",
     "LaunchTime": "2019-11-28 18:51:20+00:00",
     "Monitoring": {
      "State": "disabled"
     },
     "NetworkInterfaces": [],
     "Placement": {
      "AvailabilityZone": "us-east-2b",
      "GroupName": "",
      "Tenancy": "default"
     },
     "PrivateDnsName": "",
     "ProductCodes": [],
     "PublicDnsName": "",
     "RootDeviceName": "/dev/sda1",
     "RootDeviceType": "ebs",
     "SecurityGroups": [],
     "State": {
      "Code": 48,
      "Name": "terminated"
     },
     "StateReason": {
      "Code": "Client.UserInitiatedShutdown",
      "Message": "Client.UserInitiatedShutdown: User initiated shutdown"
     },
     "StateTransitionReason": "User initiated (2019-12-01 07:50:53 GMT)",
     "VirtualizationType": "hvm"
    }
   ],
   "OwnerId": "554773406868",
   "ReservationId": "r-0d8f8d4aacfed042b"
  },
  {
   "Groups": [],
   "Instances": [
    {
     "AmiLaunchIndex": 0,
     "Architecture": "x86_64",
     "BlockDeviceMappings": [
      {
       "DeviceName": "/dev/sda1",
       "Ebs": {
        "AttachTime": "2019-11-28 18:49:59+00:00",
        "DeleteOnTermination": true,
        "Status": "attached",
        "VolumeId": "vol-0bf8601ca7e0fba80"
       }
      }
     ],
     "CapacityReservationSpecification": {
      "CapacityReservationPreference": "open"
     },
     "ClientToken": "",
     "CpuOptions": {
      "CoreCount": 1,
      "ThreadsPerCore": 1
     },
     "EbsOptimized": false,
     "EnaSupport": true,
     "HibernationOptions": {
      "Configured": false
     },
     "Hypervisor": "xen",
     "ImageId": "ami-0d5d9d301c853a04a",
     "InstanceId": "i-0b14080af811fda3d",
     "InstanceType": "t2.micro",
     "KeyName": "vpc-peering-experiments",
     "LaunchTime": "2019-11-28 18:49:58+00:00",
     "Monitoring": {
      "State": "disabled"
     },
     "NetworkInterfaces": [
      {
       "Association": {
        "IpOwnerId": "554773406868",
        "PublicDnsName": "",
        "PublicIp": "3.136.41.161"
       },
       "Attachment": {
        "AttachTime": "2019-11-28 18:49:58+00:00",
        "AttachmentId": "eni-attach-09fcf1e54332997bd",
        "DeleteOnTermination": true,
        "DeviceIndex": 0,
        "Status": "attached"
       },
       "Description": "Primary network interface",
       "Groups": [
        {
         "GroupId": "sg-065c26b39e45ae384",
         "GroupName": "launch-wizard-1"
        }
       ],
       "InterfaceType": "interface",
       "Ipv6Addresses": [],
       "MacAddress": "06:78:cb:6c:fa:36",
       "NetworkInterfaceId": "eni-0024c0af5aa1387e5",
       "OwnerId": "554773406868",
       "PrivateIpAddress": "192.168.1.106",
       "PrivateIpAddresses": [
        {
         "Association": {
          "IpOwnerId": "554773406868",
          "PublicDnsName": "",
          "PublicIp": "3.136.41.161"
         },
         "Primary": true,
         "PrivateIpAddress": "192.168.1.106"
        }
       ],
       "SourceDestCheck": true,
       "Status": "in-use",
       "SubnetId": "subnet-0ebf6378a79a3e534",
       "VpcId": "vpc-00a31ce9d0c06675c"
      }
     ],
     "Placement": {
      "AvailabilityZone": "us-east-2b",
      "GroupName": "",
      "Tenancy": "default"
     },
     "PrivateDnsName": "ip-192-168-1-106.us-east-2.compute.internal",
     "PrivateIpAddress": "192.168.1.106",
     "ProductCodes": [],
     "PublicDnsName": "",
     "PublicIpAddress": "3.136.41.161",
     "RootDeviceName": "/dev/sda1",
     "RootDeviceType": "ebs",
     "SecurityGroups": [
      {
       "GroupId": "sg-065c26b39e45ae384",
       "GroupName": "launch-wizard-1"
      }
     ],
     "SourceDestCheck": true,
     "State": {
      "Code": 16,
      "Name": "running"
     },
     "StateTransitionReason": "",
     "SubnetId": "subnet-0ebf6378a79a3e534",
     "VirtualizationType": "hvm",
     "VpcId": "vpc-00a31ce9d0c06675c"
    }
   ],
   "OwnerId": "554773406868",
   "ReservationId": "r-00ac2f7eaec00464d"
  }
 ]
}
