projects/batfish/src/test/resources/org/batfish/representation/aws/test-transit-gateway/aws_configs/TransitGatewayAttachments.json
{
 "TransitGatewayAttachments": [
  {
   "Association": {
    "State": "associated",
    "TransitGatewayRouteTableId": "tgw-rtb-0fa40c8df355dce6e"
   },
   "CreationTime": "2019-11-29 18:59:04+00:00",
   "ResourceId": "vpc-0404e08ceddf7f650",
   "ResourceOwnerId": "554773406868",
   "ResourceType": "vpc",
   "State": "available",
   "Tags": [
    {
     "Key": "Name",
     "Value": "tgw-vpcA"
    }
   ],
   "TransitGatewayAttachmentId": "tgw-attach-07f5ec59e9f540021",
   "TransitGatewayId": "tgw-044be4464fcc69aff",
   "TransitGatewayOwnerId": "554773406868"
  },
  {
   "Association": {
    "State": "associated",
    "TransitGatewayRouteTableId": "tgw-rtb-0fa40c8df355dce6e"
   },
   "CreationTime": "2019-11-29 19:01:17+00:00",
   "ResourceId": "vpc-00a31ce9d0c06675c",
   "ResourceOwnerId": "554773406868",
   "ResourceType": "vpc",
   "State": "available",
   "Tags": [
    {
     "Key": "Name",
     "Value": "tgw-vpcB"
    }
   ],
   "TransitGatewayAttachmentId": "tgw-attach-0ae2696617bb06fb4",
   "TransitGatewayId": "tgw-044be4464fcc69aff",
   "TransitGatewayOwnerId": "554773406868"
  },
  {
   "CreationTime": "2019-11-30 01:19:57+00:00",
   "ResourceId": "vpn-034885b776a3f8a80",
   "ResourceOwnerId": "554773406868",
   "ResourceType": "vpn",
   "State": "deleted",
   "Tags": [],
   "TransitGatewayAttachmentId": "tgw-attach-0d724909ecd7a5961",
   "TransitGatewayId": "tgw-044be4464fcc69aff",
   "TransitGatewayOwnerId": "554773406868"
  }
 ]
}
